year4/#sem2/IDP/project/configs/business-logic/business-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-logic
spec:
  replicas: 3
  selector:
    matchLabels:
      app: business-logic
  template:
    metadata:
      labels:
        app: business-logic
    spec:
      containers:
        - name: business-logic
          image: 'songrate/business-logic:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: '512Mi'
              cpu: '500m'
            requests:
              memory: '256Mi'
              cpu: '250m'
