year4/#sem2/IDP/project/configs/business-logic/business-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-logic
spec:
  selector:
    app: business-logic
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
